完成 THCHS30 中文语音数据集

--- a/speech_recognition/chinese/THCHS30/notebooks/THCHS30-数据下载.ipynb
+++ b/speech_recognition/chinese/THCHS30/notebooks/THCHS30-数据下载.ipynb
@@ -184,7 +184,7 @@
         "id": "PsbZXPRhBYUo"
       },
       "source": [
-        "save_path = '/content/drive/Shareddrives/TeamDrive_top_edu/THCHS30'"
+        "save_path = '/content/drive/Shareddrives/TeamDrive_top_edu/原始数据/THCHS30'"
       ],
       "execution_count": 11,
       "outputs": []
