完成 ST-CMDS 数据集

--- a/speech_recognition/chinese/THCHS30/notebooks/THCHS30-创建Mel频谱图.ipynb
+++ b/speech_recognition/chinese/THCHS30/notebooks/THCHS30-创建Mel频谱图.ipynb
@@ -101,7 +101,7 @@
       "source": [
         "## 解压数据\n",
         "\n",
-        "数据来自：[THCHS30数据下载.ipynb](https://github.com/wu-jingtao/training-data/blob/master/speech_recognition/chinese/THCHS30/notebooks/THCHS30数据下载.ipynb)"
+        "数据来自：[THCHS30 - 数据下载](https://github.com/wu-jingtao/training-data/blob/master/speech_recognition/chinese/THCHS30/notebooks/THCHS30-数据下载.ipynb)"
       ]
     },
     {
