完成了 AISHELL 开源版 数据分析

--- a/speech_recognition/chinese/ST-CMDS/notebooks/ST-CMDS-数据分析报告.ipynb
+++ b/speech_recognition/chinese/ST-CMDS/notebooks/ST-CMDS-数据分析报告.ipynb
@@ -101,7 +101,7 @@
       "source": [
         "## 解压数据\n",
         "\n",
-        "数据来自：[ST-CMDS - 下载数据](https://github.com/wu-jingtao/training-data/blob/master/speech_recognition/chinese/ST-CMDS/notebooks/ST-CMDS-下载数据.ipynb)"
+        "数据来自：[ST-CMDS - 数据下载](https://github.com/wu-jingtao/training-data/blob/master/speech_recognition/chinese/ST-CMDS/notebooks/ST-CMDS-下载数据.ipynb)"
       ]
     },
     {
@@ -125,20 +125,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fyETL6YVUEhe"
-      },
-      "source": [
-        "查看音频"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "4aqLyb_TUEBS"
       },
       "source": [
+        "# 查看音频\n",
         "def show_audio(name):\n",
         "  audio, sr = librosa.load(f'/content/ST-CMDS-20170001_1-OS/{name}.wav', sr=None)\n",
         "  with open(f'/content/ST-CMDS-20170001_1-OS/{name}.txt') as f:\n",
@@ -560,15 +552,6 @@
       },
       "source": [
         "## 统计句子长度"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "U0moaQpwuWdL"
-      },
-      "source": [
-        "读取音频对应的句子"
       ]
     },
     {
