修复频谱图时间刻度错误

--- a/speech_recognition/chinese/THCHS30/notebooks/THCHS30-创建Mel频谱图.ipynb
+++ b/speech_recognition/chinese/THCHS30/notebooks/THCHS30-创建Mel频谱图.ipynb
@@ -57,7 +57,7 @@
         "import IPython.display as ipd\n",
         "from tqdm import tqdm"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
       "source": [
         "!tar zxvf /content/drive/Shareddrives/TeamDrive_top_edu/原始数据/THCHS30/data_thchs30.tgz > unzip_log.txt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
       "source": [
         "!tar zxvf /content/drive/Shareddrives/TeamDrive_top_edu/原始数据/THCHS30/test-noise.tgz > unzip_noise_log.txt"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
         "with open('intonation_fuzzy.json') as f:\n",
         "  pinyin_mapper_intonation_fuzzy = json.load(f)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
         "audio_list = glob.glob('/content/data_thchs30/data/*.wav')\n",
         "noise_audio_list = glob.glob('/content/test-noise/0db/**/*.wav')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
         "random.shuffle(noise_audio_list)\n",
         "random.shuffle(noise_audio_list)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
       "source": [
         "noise_audio_list[:10]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +287,7 @@
         "    audio_words[name] = words\n",
         "    audio_pinyins[name] = pinyins"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
         "      yield S_dB.T\n",
         "  return generator"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -327,7 +327,7 @@
         "mel = tf.data.Dataset.from_generator(get_melspectrogram(audio_list), output_signature=tf.TensorSpec(shape=(None, 80), dtype=tf.float32))\n",
         "noise_mel = tf.data.Dataset.from_generator(get_melspectrogram(noise_audio_list), output_signature=tf.TensorSpec(shape=(None, 80), dtype=tf.float32))"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,11 +354,11 @@
         "print(f'mel频谱形状 {sample_data.shape}')\n",
         "\n",
         "fig, ax = plt.subplots(figsize=(15, 3))\n",
-        "img = librosa.display.specshow(sample_data.T, x_axis='time', y_axis='mel', sr=16000, ax=ax)\n",
+        "img = librosa.display.specshow(sample_data.T, x_axis='time', y_axis='mel', sr=16000, hop_length=16000 // 20, ax=ax)\n",
         "fig.colorbar(img, ax=ax)\n",
         "ax.set(title='Mel-frequency spectrogram')"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +440,7 @@
         "      yield audio_words[name]\n",
         "  return generator"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -452,7 +452,7 @@
         "words = tf.data.Dataset.from_generator(get_words(audio_list), output_signature=tf.TensorSpec(shape=(None,), dtype=tf.string))\n",
         "noise_words = tf.data.Dataset.from_generator(get_words(noise_audio_list), output_signature=tf.TensorSpec(shape=(None,), dtype=tf.string))"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -477,7 +477,7 @@
       "source": [
         "' '.join(map(lambda x: str(x, 'utf-8'), next(words.as_numpy_iterator())))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +518,7 @@
         "      yield audio_pinyins[name]\n",
         "  return generator"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -530,7 +530,7 @@
         "pinyins = tf.data.Dataset.from_generator(get_pinyins(audio_list), output_signature=tf.TensorSpec(shape=(None,), dtype=tf.string))\n",
         "noise_pinyins = tf.data.Dataset.from_generator(get_pinyins(noise_audio_list), output_signature=tf.TensorSpec(shape=(None,), dtype=tf.string))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -555,7 +555,7 @@
       "source": [
         "' '.join(map(lambda x: str(x, 'utf-8'), next(pinyins.as_numpy_iterator())))"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +595,7 @@
         "      yield np.array(list(map(lambda x: pinyin_mapper[str(x, 'utf-8')], sentence)), dtype=np.int32)\n",
         "  return generator"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -620,7 +620,7 @@
         "pinyin_index_fuzzy = tf.data.Dataset.from_generator(get_pinyin_index(pinyins, pinyin_mapper_intonation_fuzzy), output_signature=tf.TensorSpec(shape=(None,), dtype=tf.int32))\n",
         "noise_pinyin_index_fuzzy = tf.data.Dataset.from_generator(get_pinyin_index(noise_pinyins, pinyin_mapper_intonation_fuzzy), output_signature=tf.TensorSpec(shape=(None,), dtype=tf.int32))"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -647,7 +647,7 @@
         "print(' '.join(sample_data))\n",
         "print(' '.join(map(lambda x: pinyin_mapper_intonation_5[x], sample_data)))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +685,7 @@
       "source": [
         "!mkdir THCHS30_mel"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -702,7 +702,7 @@
         "pinyin_index_0_cache = pinyin_index_0.cache('THCHS30_mel/pinyin_index_0')\n",
         "pinyin_index_fuzzy_cache = pinyin_index_fuzzy.cache('THCHS30_mel/pinyin_index_fuzzy')"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -736,7 +736,7 @@
         "with tqdm(total=len(audio_list), desc='pinyin_index_fuzzy_cache') as pbar:\n",
         "  for i in pinyin_index_fuzzy_cache: pbar.update()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +770,7 @@
       "source": [
         "!mkdir THCHS30_mel_noise"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -787,7 +787,7 @@
         "noise_pinyin_index_0_cache = noise_pinyin_index_0.cache('THCHS30_mel_noise/pinyin_index_0')\n",
         "noise_pinyin_index_fuzzy_cache = noise_pinyin_index_fuzzy.cache('THCHS30_mel_noise/pinyin_index_fuzzy')"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -821,7 +821,7 @@
         "with tqdm(total=len(noise_audio_list), desc='noise_pinyin_index_fuzzy_cache') as pbar:\n",
         "  for i in noise_pinyin_index_fuzzy_cache: pbar.update()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +901,7 @@
         "with open('THCHS30_mel_noise/README.txt', 'w') as f:\n",
         "  f.write(readme)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -921,7 +921,7 @@
       "source": [
         "!7z a THCHS30_mel.7z THCHS30_mel > zip_log.txt"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +932,7 @@
       "source": [
         "!7z a THCHS30_mel_noise.7z THCHS30_mel_noise > zip_noise_log.txt"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -952,7 +952,7 @@
       "source": [
         "!cp THCHS30_mel.7z /content/drive/Shareddrives/TeamDrive_top_edu/生成数据/THCHS30_mel.7z"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -963,7 +963,7 @@
       "source": [
         "!cp THCHS30_mel_noise.7z /content/drive/Shareddrives/TeamDrive_top_edu/生成数据/THCHS30_mel_noise.7z"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -974,7 +974,7 @@
       "source": [
         "!cp -r THCHS30_mel /content/drive/Shareddrives/TeamDrive_top_edu/生成数据/"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -985,7 +985,7 @@
       "source": [
         "!cp -r THCHS30_mel_noise /content/drive/Shareddrives/TeamDrive_top_edu/生成数据/"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     }
   ]
