优化了拼音字典

--- a/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
+++ b/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
@@ -58,7 +58,7 @@
         "import IPython.display as ipd\n",
         "from tqdm import tqdm"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -77,13 +77,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NQuOVVldmQ9f",
-        "outputId": "7c57895e-8263-40b8-bd7b-b868611e895e"
+        "outputId": "fa2788b7-adc9-4ddd-8e20-b8cb89cf0876"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
         "\n",
         "    sentences[name] = {'pinyins': pinyins, 'sentence': sentence}"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -194,7 +194,7 @@
         "  phonetic = f.readlines()\n",
         "  phonetic = [i.strip() for i in phonetic]"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
         "  for p in item['pinyins']:\n",
         "    occurred_pinyin.add(p)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8a022fd7-a8e1-44ef-fcaa-f05a2e21d678"
+        "outputId": "fb2a0744-e688-45ae-d242-242724690376"
       },
       "source": [
         "punctuation = set()\n",
@@ -245,22 +245,24 @@
         "for item in sentences.values():\n",
         "  for p in re.findall('[^ＢＰ\\u4e00-\\u9fa5]', item['sentence']):\n",
         "    punctuation.add(p)\n",
-        "      \n",
+        "\n",
+        "# 把句号排在最前面      \n",
+        "punctuation = list(sorted(punctuation, key=lambda x: abs(ord(x) - ord('。'))))\n",
         "punctuation"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'—', '“', '”', '…', '、', '。', '！', '（', '）', '，', '：', '；', '？'}"
+              "['。', '、', '…', '”', '“', '—', '！', '（', '）', '，', '：', '；', '？']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": null
+          "execution_count": 14
         }
       ]
     },
@@ -280,7 +282,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BYaydgj2oFns",
-        "outputId": "43b05d80-facb-4326-dd49-7401164d7b10"
+        "outputId": "6706d752-c117-4c3a-ccf1-21203b1b0be2"
       },
       "source": [
         "pinyin_mapper = {'count': 0}\n",
@@ -317,7 +319,7 @@
         "\n",
         "print('发音类别总数：', pinyin_mapper['count'])"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,12 +355,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XItQXmmvGtET",
-        "outputId": "82c562ed-14eb-47e9-86bd-a19b1b04b765"
+        "outputId": "8f764cef-7313-4171-ddf3-d35927d2a540"
       },
       "source": [
         "missing_pinyin"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -370,7 +372,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": null
+          "execution_count": 16
         }
       ]
     },
@@ -391,7 +393,7 @@
       "source": [
         "replace_pinyin = ['chuan', 'deng', 'neng', 'lve', 'meng', 'niu', 'nu']"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -404,7 +406,7 @@
         "  for i in range(1, 6):\n",
         "    pinyin_mapper[missing + str(i)] = pinyin_mapper[replace + '5']"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -419,6 +421,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3ILULXmCO9Mo"
+      },
+      "source": [
+        "# 记录不包含标点符号的类别总数\n",
+        "pinyin_mapper['count_without_punctuation'] = pinyin_mapper['count']"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "mgt7ocBp8B5s"
       },
       "source": [
@@ -427,7 +441,7 @@
         "  pinyin_mapper[pinyin_mapper['count']] = item\n",
         "  pinyin_mapper['count'] += 1"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -446,7 +460,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YTN-zafAbhD8",
-        "outputId": "4dbd3099-be24-462c-c586-f30ff6169288"
+        "outputId": "f4651d96-d545-466d-cc07-bcbc79671da5"
       },
       "source": [
         "for key, value in sentences.copy().items():\n",
@@ -455,7 +469,7 @@
         "\n",
         "print('不包含儿化音的句子有：', len(sentences))"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +509,7 @@
         "    add_punctuation += 1\n",
         "  item['pinyins_punctuation'] = result"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -514,7 +528,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mk23Npm9ugp-",
-        "outputId": "b0afd835-d793-48fc-95f0-7db64ed5a3a0"
+        "outputId": "6888f126-1c7c-4dc8-d3e3-b9c137c52969"
       },
       "source": [
         "item = sentences['002794']\n",
@@ -522,7 +536,7 @@
         "print('pinyins：', item['pinyins'])\n",
         "print('pinyins_punctuation：', item['pinyins_punctuation'])"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,15 +562,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "MVaaRw1RSsTF",
-        "outputId": "7a72029b-424b-4e90-ce0a-fc28a013e39a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b3bfe940-ff33-48a9-e723-f0091e443dc4"
       },
       "source": [
         "max([len(item['pinyins_punctuation']) for item in sentences.values()])"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +582,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": null
+          "execution_count": 24
         }
       ]
     },
@@ -658,7 +672,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": null
+          "execution_count": 0
         },
         {
           "output_type": "display_data",
@@ -715,7 +729,7 @@
         "with open('pinyin_mapper.json', 'w') as f:\n",
         "  json.dump(pinyin_mapper, f)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -740,7 +754,7 @@
         "words = tf.data.Dataset.from_generator(words_generator, output_signature=tf.TensorSpec(shape=(None,), dtype=tf.string))\n",
         "words = words.cache('/content/words')"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -750,18 +764,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S_TpP0PnI_Y1",
-        "outputId": "ff76c227-0788-4639-eff0-374b4816ede0"
+        "outputId": "ec31c699-d2f8-4f46-8e78-b6916ad0f6e4"
       },
       "source": [
         "with tqdm(total=len(sentences)) as pbar:\n",
         "  for i in words: pbar.update()"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 9773/9773 [00:03<00:00, 2792.71it/s]\n"
+            "100%|██████████| 9773/9773 [00:05<00:00, 1864.99it/s]\n"
           ],
           "name": "stderr"
         }
@@ -789,7 +803,7 @@
         "pinyins = tf.data.Dataset.from_generator(pinyins_generator, output_signature=tf.TensorSpec(shape=(None,), dtype=tf.int32))\n",
         "pinyins = pinyins.cache('/content/pinyins')"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -799,18 +813,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A5MpKSkiJhJD",
-        "outputId": "9c1e4f7d-44a8-4500-c5ad-e5e4982b71fe"
+        "outputId": "ece984ae-5c92-427c-cfb1-298feb6e983b"
       },
       "source": [
         "with tqdm(total=len(sentences)) as pbar:\n",
         "  for i in pinyins: pbar.update()"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 9773/9773 [00:03<00:00, 2793.49it/s]\n"
+            "100%|██████████| 9773/9773 [00:05<00:00, 1911.04it/s]\n"
           ],
           "name": "stderr"
         }
@@ -838,7 +852,7 @@
         "pinyins_punctuation = tf.data.Dataset.from_generator(pinyins_punctuation_generator, output_signature=tf.TensorSpec(shape=(None,), dtype=tf.int32))\n",
         "pinyins_punctuation = pinyins_punctuation.cache('/content/pinyins_punctuation')"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -848,18 +862,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I6KRh-cxKB6G",
-        "outputId": "731cc09c-9b6e-4b0a-c22c-81d6c4154355"
+        "outputId": "6f6cab65-b4de-42bc-f9f3-bddb1a90132d"
       },
       "source": [
         "with tqdm(total=len(sentences)) as pbar:\n",
         "  for i in pinyins_punctuation: pbar.update()"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 9773/9773 [00:05<00:00, 1911.07it/s]\n"
+            "100%|██████████| 9773/9773 [00:05<00:00, 1911.31it/s]\n"
           ],
           "name": "stderr"
         }
