更新 BZNSYP - 创建频谱图数据

--- a/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
+++ b/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
@@ -25,18 +25,35 @@
       "source": [
         "# BZNSYP - 创建频谱图数据\n",
         "\n",
-        "音频经过以下变换：\n",
-        "\n",
-        "1. `sample_rate` 设置为 `22050`\n",
-        "1. `win_length` 设置为 `512`\n",
-        "1. `hop_length` 设置为 `128`\n",
-        "1. `mel` 频谱图 `filter-bank` 设置为 `80`\n",
-        "\n",
         "文本经过以下变换：\n",
         "\n",
         "1. 去除了带有儿化音的句子\n",
         "1. 给拼音添加标点符号\n",
-        "1. 将拼音转换成了数字索引"
+        "1. 将拼音转换成了数字索引\n",
+        "\n",
+        "音频经过以下变换：\n",
+        "\n",
+        "1. 波形图：\n",
+        "  * `sample_rate` 设置为 `22050`\n",
+        "  * 音量进行了统一\n",
+        "1. `mu_law` 波形图：\n",
+        "  * `sample_rate` 设置为 `22050`\n",
+        "  * 音量进行了统一\n",
+        "  * `mu` 设置为 `255`，取值范围调整到了 `[0, 255]`\n",
+        "1. `magnitude` 频谱图：\n",
+        "  * `win_length` 设置为 `512`\n",
+        "  * `hop_length` 设置为 `128`\n",
+        "  * 取值范围调整到了 `[-1, 1]`\n",
+        "1. 高分辨率 `mel` 频谱图：\n",
+        "  * `win_length` 设置为 `512`\n",
+        "  * `hop_length` 设置为 `128`\n",
+        "  * `filter-bank` 设置为 `80`\n",
+        "  * 取值范围调整到了 `[-1, 1]`\n",
+        "1. 低分辨率 `mel` 频谱图：\n",
+        "  * `win_length` 设置为 `2048`\n",
+        "  * `hop_length` 设置为 `512`\n",
+        "  * `filter-bank` 设置为 `80`\n",
+        "  * 取值范围调整到了 `[-1, 1]`"
       ]
     },
     {
@@ -72,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NQuOVVldmQ9f",
-        "outputId": "f56f35ab-ea44-4a17-a7ab-ef5f47454d84"
+        "outputId": "174abd07-e8b5-4fe1-959e-d24d96a4fb9d"
       },
       "source": [
         "from google.colab import drive\n",
@@ -243,7 +260,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BYaydgj2oFns",
-        "outputId": "728da638-45d4-43a5-9501-13f9a57cef34"
+        "outputId": "e0d2e082-57b2-4037-ab72-78f336152874"
       },
       "source": [
         "missing_pinyin = []\n",
@@ -315,7 +332,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XItQXmmvGtET",
-        "outputId": "3b74d093-89ac-4a00-8025-528e3d9ab5ad"
+        "outputId": "f6965810-2d2d-41fc-bfce-68d498297f5e"
       },
       "source": [
         "missing_pinyin"
@@ -380,10 +397,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bbYXOB00Qyld",
-        "outputId": "ec9d452c-9edd-45f3-f1d9-6c76a9905be7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3f4d2dba-8cbe-41f5-9f17-2770883408cf"
       },
       "source": [
         "punctuation = set()\n",
@@ -461,7 +478,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YTN-zafAbhD8",
-        "outputId": "e8f2e08b-aed3-4d93-fe2a-81c409746be6"
+        "outputId": "34292522-961a-4a13-b961-d4635990a942"
       },
       "source": [
         "for key, value in sentences.copy().items():\n",
@@ -529,7 +546,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mk23Npm9ugp-",
-        "outputId": "bb4ad33b-b652-419b-fcc9-8faee90b631e"
+        "outputId": "88e94138-8f41-4205-bf94-4861237f5dd4"
       },
       "source": [
         "item = sentences['002794']\n",
@@ -566,7 +583,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0b0f874e-0379-49b3-fd3f-a9e64831b8b7"
+        "outputId": "59e4bcae-15c8-41c4-87fa-c66af6c54319"
       },
       "source": [
         "max([len(item['pinyins_punctuation']) for item in sentences.values()])"
@@ -603,6 +620,7 @@
         "def load_audio_data():\n",
         "  for name in sentences.keys():\n",
         "    audio, sr = librosa.load(f'Wave/{name}.wav', sr=22050)\n",
+        "    audio = audio / np.max(np.abs(audio)) # 统一音量\n",
         "    yield audio"
       ],
       "execution_count": null,
@@ -623,10 +641,46 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "HAcKS3l3nF0S"
+      },
+      "source": [
+        "## 生成 mu_law 波形图"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5Br_-2HHnIE-"
+      },
+      "source": [
+        "def create_mu_law():\n",
+        "  for wave in audios.as_numpy_iterator():\n",
+        "    x = librosa.mu_compress(wave, mu=255, quantize=True)\n",
+        "    x = (x + 128).astype(np.uint8)\n",
+        "    yield x"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JXt7fEgCnUq2"
+      },
+      "source": [
+        "mu_law = tf.data.Dataset.from_generator(create_mu_law, output_signature=tf.TensorSpec(shape=(None,), dtype=tf.uint8))\n",
+        "mu_law = mu_law.cache('mu_law')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "kRjeZmWXyoyH"
       },
       "source": [
-        "## 创建频谱图"
+        "## 创建 magnitude 频谱图"
       ]
     },
     {
@@ -638,9 +692,7 @@
         "def create_magnitude():\n",
         "  for wave in audios.as_numpy_iterator():\n",
         "    stft = librosa.stft(wave, n_fft=512, hop_length=128)\n",
-        "    # 转换为频谱图，顺便统一音量\n",
         "    magnitude = librosa.amplitude_to_db(np.abs(stft), ref=np.max)\n",
-        "    # 将取值范围调整到 [-1, 1] 之间\n",
         "    magnitude = (magnitude + 40) / 40\n",
         "    yield magnitude.T"
       ],
@@ -665,7 +717,7 @@
         "id": "mw8BEGLBYS8C"
       },
       "source": [
-        "## 创建 mel 频谱图"
+        "## 创建高分辨率 mel 频谱图"
       ]
     },
     {
@@ -674,12 +726,10 @@
         "id": "WpK_dQIpYSmZ"
       },
       "source": [
-        "def create_mel():\n",
+        "def create_high_mel():\n",
         "  for wave in audios.as_numpy_iterator():\n",
         "    S = librosa.feature.melspectrogram(wave, sr=22050, n_fft=512, hop_length=128, n_mels=80)\n",
-        "    # 这里顺带做了音量统一\n",
         "    S_dB = librosa.power_to_db(S, ref=np.max) \n",
-        "    # 将取值范围调整到 [-1, 1] 之间\n",
         "    S_dB = (S_dB + 40) / 40\n",
         "    yield S_dB.T"
       ],
@@ -692,8 +742,45 @@
         "id": "KHS2wum6Yd8p"
       },
       "source": [
-        "mels = tf.data.Dataset.from_generator(create_mel, output_signature=tf.TensorSpec(shape=(None, 80), dtype=tf.float32))\n",
-        "mels = mels.cache('mels')"
+        "high_mels = tf.data.Dataset.from_generator(create_high_mel, output_signature=tf.TensorSpec(shape=(None, 80), dtype=tf.float32))\n",
+        "high_mels = high_mels.cache('high_mels')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WUhHc1Kdoj6v"
+      },
+      "source": [
+        "## 创建低分辨率 mel 频谱图"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FhEC6_PGolgl"
+      },
+      "source": [
+        "def create_low_mel():\n",
+        "  for wave in audios.as_numpy_iterator():\n",
+        "    S = librosa.feature.melspectrogram(wave, sr=22050, n_fft=2048, hop_length=512, n_mels=80)\n",
+        "    S_dB = librosa.power_to_db(S, ref=np.max) \n",
+        "    S_dB = (S_dB + 40) / 40\n",
+        "    yield S_dB.T"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bp-om-vYoldj"
+      },
+      "source": [
+        "low_mels = tf.data.Dataset.from_generator(create_low_mel, output_signature=tf.TensorSpec(shape=(None, 80), dtype=tf.float32))\n",
+        "low_mels = low_mels.cache('low_mels')"
       ],
       "execution_count": null,
       "outputs": []
@@ -760,7 +847,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S_TpP0PnI_Y1",
-        "outputId": "5032e333-eed1-45e2-b748-a75d3ae73251"
+        "outputId": "6b518188-5ae5-4a15-ca5a-35efe69ac124"
       },
       "source": [
         "with tqdm(total=len(sentences)) as pbar:\n",
@@ -772,7 +859,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9773/9773 [00:05<00:00, 1863.65it/s]\n"
+            "100%|██████████| 9773/9773 [00:05<00:00, 1835.85it/s]\n"
           ]
         }
       ]
@@ -809,7 +896,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A5MpKSkiJhJD",
-        "outputId": "0d69b238-df61-4c6d-8932-534fc872ae67"
+        "outputId": "2984128c-b356-432a-a8cb-ab3985ef6d83"
       },
       "source": [
         "with tqdm(total=len(sentences)) as pbar:\n",
@@ -821,7 +908,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9773/9773 [00:05<00:00, 1910.28it/s]\n"
+            "100%|██████████| 9773/9773 [00:05<00:00, 1910.79it/s]\n"
           ]
         }
       ]
@@ -858,7 +945,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I6KRh-cxKB6G",
-        "outputId": "ce3e049f-df53-4db8-e8a1-f0fc24217c72"
+        "outputId": "3ff9a969-a479-4cbf-9bb2-ec2fd0cf2f6c"
       },
       "source": [
         "with tqdm(total=len(sentences)) as pbar:\n",
@@ -870,7 +957,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9773/9773 [00:03<00:00, 2839.23it/s]\n"
+            "100%|██████████| 9773/9773 [00:03<00:00, 2818.94it/s]\n"
           ]
         }
       ]
@@ -888,10 +975,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZaiolVGfbXXQ",
-        "outputId": "b206a06e-cdc8-4691-a590-93b50cd28ad5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "255bf3e2-857a-4783-988d-636a7698d223"
       },
       "source": [
         "with tqdm(total=len(sentences)) as pbar:\n",
@@ -903,7 +990,40 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9773/9773 [31:35<00:00,  5.16it/s]\n"
+            "100%|██████████| 9773/9773 [33:32<00:00,  4.86it/s]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2oHc6QL2pLWB"
+      },
+      "source": [
+        "#### 保存 mu_law 波形图数据"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GOE35aDrpN9g",
+        "outputId": "7d8910ec-c403-41d8-9bc6-710b4aacf546",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "with tqdm(total=len(sentences)) as pbar:\n",
+        "  for i in mu_law: pbar.update()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 9773/9773 [01:31<00:00, 106.93it/s]\n"
           ]
         }
       ]
@@ -914,7 +1034,7 @@
         "id": "-yonoXJb4-N4"
       },
       "source": [
-        "#### 保存频谱图数据"
+        "#### 保存 magnitude 频谱图数据"
       ]
     },
     {
@@ -924,7 +1044,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6_iCif2ba853",
-        "outputId": "addd6582-4932-4bf2-a910-51c6523f56a0"
+        "outputId": "cc6057b0-8ff0-4d2d-c5a3-0dab6b3f6f48"
       },
       "source": [
         "with tqdm(total=len(sentences)) as pbar:\n",
@@ -936,7 +1056,40 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9773/9773 [02:21<00:00, 68.86it/s]\n"
+            "100%|██████████| 9773/9773 [02:21<00:00, 68.84it/s]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FB8e3LQ_pUSt"
+      },
+      "source": [
+        "#### 保存高分辨率 mel 频谱图数据"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tV3e6rbNpY5d",
+        "outputId": "dffda4d3-ed55-441e-e73d-436cd6aec120",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "with tqdm(total=len(sentences)) as pbar:\n",
+        "  for i in high_mels: pbar.update()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 9773/9773 [02:46<00:00, 58.68it/s]\n"
           ]
         }
       ]
@@ -947,7 +1100,7 @@
         "id": "YcdbYTgT5AkO"
       },
       "source": [
-        "#### 保存 mel 频谱图数据"
+        "#### 保存低分辨率 mel 频谱图数据"
       ]
     },
     {
@@ -957,11 +1110,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5bc8c934-ee91-4566-d112-83e32d197777"
+        "outputId": "20c44379-0ffe-459c-e7e8-3678061db12f"
       },
       "source": [
         "with tqdm(total=len(sentences)) as pbar:\n",
-        "  for i in mels: pbar.update()"
+        "  for i in low_mels: pbar.update()"
       ],
       "execution_count": null,
       "outputs": [
@@ -992,15 +1145,22 @@
         "readme = '''数据来源：https://test.data-baker.com/#/data/index/source\n",
         "项目地址：https://github.com/wu-jingtao/training-data/blob/master/speech_synthesis/chinese/BZNSYP/README.md\n",
         "创建时间：{}\n",
+        "音频总数：{}\n",
         "\n",
         "数据类型：\n",
         "audios：音频对应的波形图\n",
         "  {}\n",
         "\n",
-        "magnitudes：音频对应的频谱图\n",
+        "mu_law：音频对应的 mu_law 波形图\n",
         "  {}\n",
         "\n",
-        "mels：音频对应的 mel 频谱图\n",
+        "magnitudes：音频对应的 magnitude 频谱图\n",
+        "  {}\n",
+        "\n",
+        "high_mels：音频对应的高分辨率 mel 频谱图\n",
+        "  {}\n",
+        "\n",
+        "low_mels：音频对应的低分辨率 mel 频谱图\n",
         "  {}\n",
         "\n",
         "words：音频对应的文字\n",
@@ -1019,9 +1179,12 @@
         "\n",
         "readme = readme.format(\n",
         "  datetime.datetime.today(),\n",
+        "  len(sentences),\n",
         "  audios.element_spec,\n",
+        "  mu_law.element_spec,\n",
         "  magnitudes.element_spec,\n",
-        "  mels.element_spec,\n",
+        "  high_mels.element_spec,\n",
+        "  low_mels.element_spec,\n",
         "  words.element_spec,\n",
         "  pinyins.element_spec,\n",
         "  pinyins_punctuation.element_spec\n",
@@ -1052,8 +1215,10 @@
         "README.txt \\\n",
         "pinyin_mapper.json \\\n",
         "audios.index audios.data-00000-of-00001 \\\n",
+        "mu_law.index mu_law.data-00000-of-00001 \\\n",
         "magnitudes.index magnitudes.data-00000-of-00001 \\\n",
-        "mels.index mels.data-00000-of-00001 \\\n",
+        "high_mels.index high_mels.data-00000-of-00001 \\\n",
+        "low_mels.index low_mels.data-00000-of-00001 \\\n",
         "words.index words.data-00000-of-00001 \\\n",
         "pinyins.index pinyins.data-00000-of-00001 \\\n",
         "pinyins_punctuation.index pinyins_punctuation.data-00000-of-00001 > zip_log.txt"
@@ -1092,8 +1257,10 @@
         "README.txt \\\n",
         "pinyin_mapper.json \\\n",
         "audios.index audios.data-00000-of-00001 \\\n",
+        "mu_law.index mu_law.data-00000-of-00001 \\\n",
         "magnitudes.index magnitudes.data-00000-of-00001 \\\n",
-        "mels.index mels.data-00000-of-00001 \\\n",
+        "high_mels.index high_mels.data-00000-of-00001 \\\n",
+        "low_mels.index low_mels.data-00000-of-00001 \\\n",
         "words.index words.data-00000-of-00001 \\\n",
         "pinyins.index pinyins.data-00000-of-00001 \\\n",
         "pinyins_punctuation.index pinyins_punctuation.data-00000-of-00001 \\\n",
