--- a/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
+++ b/speech_synthesis/chinese/BZNSYP/notebooks/BZNSYP-创建频谱图数据.ipynb
@@ -33,7 +33,7 @@
         "  * `filter-bank` 设置为 `80`\n",
         "  * 取值范围调整到了 `[-1, 1]`\n",
         "1. 低分辨率 `mel` 频谱图：\n",
-        "  * `win_length` 设置为 `2048`\n",
+        "  * `win_length` 设置为 `1024`\n",
         "  * `hop_length` 设置为 `512`\n",
         "  * `filter-bank` 设置为 `80`\n",
         "  * 取值范围调整到了 `[-1, 1]`"
@@ -750,7 +750,7 @@
       "source": [
         "def create_low_mel():\n",
         "  for wave in audios.as_numpy_iterator():\n",
-        "    S = librosa.feature.melspectrogram(wave, sr=22050, n_fft=2048, hop_length=512, n_mels=80, center=False)\n",
+        "    S = librosa.feature.melspectrogram(wave, sr=22050, n_fft=1024, hop_length=512, n_mels=80, center=False)\n",
         "    S_dB = librosa.power_to_db(S, ref=np.max) \n",
         "    S_dB = (S_dB + 40) / 40\n",
         "    yield S_dB.T"
@@ -1257,8 +1257,7 @@
     "colab": {
       "collapsed_sections": [],
       "name": "BZNSYP - 创建频谱图数据.ipynb",
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
